[package]
name = "rust_lib_ever_account_util"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.0.0-dev.36"
ed25519-dalek = '2.0'
pbkdf2 = { default-features = false, version = '0.8.0' }
hmac = '0.11.0'
serde_json = '1.0.41'
serde = { version = "1.0.193", features = ["derive"] }
sha2 = '0.9.5'
zeroize = { features = [ 'zeroize_derive' ], version = '1.3' }
base58 = '0.1.0'
libsecp256k1 = '0.6.0'
byteorder = '1.3.2'
hex = "0.4.3"
# 以下为账号编码
ever_abi = { git = 'https://github.com/everx-labs/ever-abi.git', tag = '2.7.2' }
ever_block = { git = 'https://github.com/everx-labs/ever-block.git', tag = '1.11.11' }
base64 = "0.13.1"





